# haskell-programming-book

ch11/: AsPatterns.hs  Capitalize.hs  Hutton.hs  Phone.hs  Tree.hs  Vigenere.hs
ch12/: Either.hs  Maybe.hs  MyUnfoldr.hs  Natural.hs  Person.hs  Tree.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch14/: 14-6-Arbitrary.hs  stack.yaml
ch14/addition/: Addition.hs  Division.hs  addition.cabal
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch15-monoid/: CHANGELOG.md  madness.hs  nonempty.hs  quickcheck-monoid.cabal
ch15-monoid/app/: Monoid.hs  Semigroup.hs
ch15-monoid/exercise/: optional.hs
ch15-monoid/monoid/: monoid.cabal
ch15-monoid/monoid/src/: Monoid.hs  Semigroup.hs
ch15-monoid/monoid/tests/: MonoidTest.hs  SemigroupTest.hs
ch16-functor/: ChapterExercise2.hs  FlipFunctor.hs  Sum.hs  exercise-possibly.hs
ch16-functor/functor-exercise/: functor-exercise.cabal
ch16-functor/functor-exercise/src/: Exercises.hs  Main.hs
ch16-functor/functor-exercise/tests/: tests.hs
ch17-applicative/: ApplicativeLaw.hs  BadMonoid.hs  ChapterExercise1.hs  ChapterExercise3.hs  FixerUpper.hs  MaybeCow.hs  MaybePerson.hs
ch17-applicative/exercise/: exercise.cabal
ch17-applicative/exercise/src/: Apl1.hs  BadMonoid.hs  ChapterExercise2.hs  Validation.hs  ZipList.hs
ch18/: Bind.hs  FixerUpper.hs
ch18/exercise/: exercise.cabal
ch18/exercise/src/: BadMonad.hs
ch21/: Either.hs  Tuple.hs
ch22-reader/: 22-7-Monad-of-functions.hs  22-8-PrettyReader.hs
ch23/: 23-5-Throw-down.hs  23-6-moi.hs  fizzbuzz.hs
ch23/exercise/: exercise.cabal
ch23/exercise/src/: Exercise1.hs  Main.hs
ch3-string/: reverse.hs
ch6/: exercise-2.hs  exercise-3.hs  exercise-4.hs  exercise-type-kwon-do.hs  out
ch8/: mcCarthy.hs  wordNumber.hs
ch9/: Cipher.hs  capitalize.hs
