cabal-version:      3.4
name:               quickcheck-monoid
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             qpzm
maintainer:         lhm1442@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable semigroup
    main-is:          Semigroup.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        QuickCheck >= 2.0,
    hs-source-dirs:   app
    default-language: Haskell2010

executable monoid
    main-is:          Monoid.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        QuickCheck >= 2.0,
    hs-source-dirs:   app
    default-language: Haskell2010
