name:                functor-exercise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/functor-exercise#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library exercises
  hs-source-dirs:      src
  exposed-modules:     Exercises
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , array
                      , QuickCheck

test-suite tests
  hs-source-dirs:       tests
  main-is:              tests.hs
  ghc-options:          -Wall -fno-warn-orphans
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base
                      , exercises
                      , hspec
                      , QuickCheck
